--- a/src/main/webapp/css/roc.css
+++ b/src/main/webapp/css/roc.css
@@ -17,7 +17,7 @@ blockquote {
 /*custom*/
 .roc-c-article-post {
     font-family: "Microsoft Yahei", Tahoma, Helvetica, Arial, "SimSun", sans-serif;
-    text-shadow: 1px 1px #fff;
+    /*text-shadow: 1px 1px #fff;*/
 }
 .roc-c-div-tag a{
     border: 1px solid #ebebeb;
