--- a/src/main/webapp/css/roc.css
+++ b/src/main/webapp/css/roc.css
@@ -14,6 +14,10 @@ img{
 blockquote {
     font-size: 14px;
 }
+section p code{
+    word-wrap: break-word;
+    /*word-break: break-all;*/
+}
 /*custom*/
 .roc-c-article-post {
     font-family: "Microsoft Yahei", Tahoma, Helvetica, Arial, "SimSun", sans-serif;
